Thu Jan 04 17:07:48 2001  Luther Baker  <luther@cs.wustl.edu>

 	* ace/ace_dll.dsp

 	  Consistent typography (win32 specific backslash).

Thu Jan  4 15:34:14 2001  Luther J Baker  <luther@cs.wustl.edu>

 	* ace/ace_dll.dsp

  	  Added PACE library to the ACE DLL project file.
 	  (also changed the library search path)

Wed Jan  3 17:24:11 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS.h:

          Mistakenly changed the ace_timezone () method to use
          timezone () instead of timezone.  Changed back.

Wed Jan  3 16:00:22 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/ACE.cpp

          Changed the types of day_of_week_name and month_name in
          ACE::timestamp to ACE_TCHAR (since that was the data
          being assigned to it and the type that is later expected).
          This fixed errors in Win32's Unicode build.

Wed Jan  3 15:44:31 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS.i:

          Removed ACE_TIMEZONE since we found another workaround for 
          platforms that define timezone () as a macro.

        * ace/OS.h:
        * ace/OS.i:

          Moved much of the code from ACE_OS::timezone and 
          ACE_OS::difftime into ace_timezone and ace_difftime.  Since 
          some platforms don't have timezone or difftime, we needed 
          to do something here so those methods aren't used.  Instead 
          of figuring out what larger #if !... should be, it is easier 
          (and less error prone) to just move the code here.

Wed Jan  3 13:10:39 2001  Darrell Brunsch <brunsch@uci.edu>

        * apps/JAWS/server/HTTP_Helpers.cpp:

          Added ACE_MT around an ACE_Guard to remove an unused var
          warning in the single threaded builds.

Wed Jan  3 12:56:13 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/Timer_Wheel_T.cpp:
        * ace/Timer_Wheel_T.h:

          Doug noticed some redundant code in expire while making his